--- a/index.html
+++ b/index.html
@@ -40,21 +40,25 @@
             color: #777;
             margin-bottom: 20px;
         }
-        /* 캘린더 영역 스타일 */
         .calendar-section {
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 15px;
-            margin-bottom: 30px;
-            background-color: #fafafa;
+            position: relative;
+            width: 100%;
+            max-width: 800px;
+            margin: 0 auto 20px auto;
+            height: 600px;
         }
-        /* 캘린더 iframe 크기 */
         .calendar-iframe {
             width: 100%;
-            height: 700px; /* 기본 높이를 700px로 변경 */
+            height: 100%;
             border: none;
             overflow: hidden;
             border-radius: 8px;
+        }
+        @media (max-width: 768px) {
+            .calendar-section {
+                height: 768px;
+                width: 768px;
+            }
         }
         .note {
             font-size: 0.9em;
@@ -66,7 +70,7 @@
             display: flex;
             flex-direction: column;
             gap: 15px;
-            margin-top: 30px;
+            margin-top: 100px; /* 이 부분을 수정하여 여백을 크게 늘렸습니다. */
         }
         .button-link {
             display: block;
@@ -94,7 +98,6 @@
             background-color: #2c3e50;
             border-color: #2c3e50;
         }
-        /* 모바일 화면 (600px 이하)에서의 캘린더 iframe 크기 */
         @media (max-width: 600px) {
             .container {
                 padding: 15px;
@@ -105,9 +108,6 @@
             .button-link {
                 font-size: 1.2rem;
                 padding: 15px;
-            }
-            .calendar-iframe {
-                height: 450px; /* 모바일에서 높이를 450px로 변경 */
             }
         }
     </style>
